deixando somente o workflow dispatch no CI.YML
deixando somente o workflow dispatch no CI.YML

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,12 +4,12 @@ on:
 
   workflow_dispatch:
     
-  push:
-    branches: 
-      - develop 
+  # push:
+  #  branches: 
+  #    - develop 
       
-  pull_request:
-    branches: [ develop ]
+  # pull_request:
+  #  branches: [ develop ]
 
 jobs:
   build:
