--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -7,8 +7,9 @@ on:
   #  branches:
   #    - develop
       
-  # pull_request:
-  #  types: [opened, synchronize, reopened]
+  pull_request:
+    types: [opened, synchronize, reopened]
+  
 jobs:
   build:
     name: Build
