incluindo push no master e no develop no Sonar.yml
incluindo push no master e no develop no Sonar.yml

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -3,9 +3,9 @@ on:
 
   workflow_dispatch:
     
-  # push:
-  #  branches:
-  #    - develop
+  push:
+    branches:
+       [evelop, master]
       
   pull_request:
     types: [opened, synchronize, reopened]
