--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         fetch-depth: 2
 
-    - run: git checkout HEAD^2
+    - run: git checkout #HEAD^2
       if: ${{ github.event_name == 'pull_request' }}
 
     - name: Initialize CodeQL
