--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -20,8 +20,8 @@ jobs:
       with:
         fetch-depth: 2
 
-    - run: git checkout #HEAD^2
-      if: ${{ github.event_name == 'pull_request' }}
+    #- run: git checkout #HEAD^2
+    #  if: ${{ github.event_name == 'pull_request' }}
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
